# Model-Training-S3

./: .env.example  .gitignore  README.md  ml_service.py  pyproject.toml  requirements.txt
.github/workflows/: train.yml
ml/: predict.py  s3_utils.py  train.py
