[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "model-training-s3"
version = "0.1.0"
description = "Entrenamiento de modelo Citibike con subida a S3"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["ml*"]
